# RMU_NorFlashSPi

apploader/pack/: core_filelist.xml
apploader/src/: core_export.list
appstart/src/: app_start.c
atr/: Kconfig
atr/include/: at_cfg.h  at_engine.h  atr_config.h.in
ats/include/: at_cfw.h
bootloader/: CMakeLists.txt
bootloader/boot/: boot2_start_8910.c
bootloader/src/: boot_adi_bus.c  boot_fdl_dnld.c  boot_uart.c  boot_vfs.c
cfw/: Kconfig
cfw/include/: cfw.h  cfw_config.h.in
chip/: chip_8910.cmake
driver/: CMakeLists.txt  core.cmake
driver/include/: drv_camera.h  drv_charger.h  drv_i2c.h  drv_keypad.h  drv_lcd.h  drv_names.h  drv_spi.h  drv_spi_flash.h  drv_wcn_ipc.h  image_sensor.h
fs/fsmount/: CMakeLists.txt
hal/: CMakeLists.txt  Kconfig
hal/include/: hal_chip.h  hal_hwspinlock.h
hal/src/: hal_spi_flash_prop.c  hal_spi_flash_prop.csv
kernel/include/: osi_api.h  osi_trace.h
net/include/: ppp_interface.h
net/mbedtls/: CMakeLists.txt
ql-application/: CMakeLists.txt  ql_app_feature_config.cmake  ql_app_feature_config.h.in
ql-application/audio/: audio_demo.c
ql-application/bt/: ble_gatt_demo.c  bt_hfp_demo.c
ql-application/camera/: camera_demo.c
ql-application/dev/: ql_dev_demo.c
ql-application/fs/: ql_fs_demo.c
ql-kernel/: CMakeLists.txt  Kconfig
ql-kernel/drivers/: CMakeLists.txt  ql_embed_nor_flash.c  quec_customer_cfg.c  quec_internal_cfg.c  quec_pin_cfg_EC200U.c  quec_pin_cfg_EC600U.c  quec_pin_cfg_EG500U.c  quec_pin_cfg_EG700U.c  quec_pin_cfg_EG915U.c  quec_pin_init.c  quec_spi_nor_flash_prop.c
(+168 files in other folders)
